--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE HTML>
+<!--
+    Pyme INSIDE - index.html
+    Actualizado con Chord Diagram que representa los beneficios de BI, IA y BI + IA
+-->
 <html lang="es">
     <head>
-        <title>PymeInside</title>
+        <title>Pyme INSIDE</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <!-- CSS -->
@@ -21,11 +25,12 @@
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
         <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-        <!-- Firebase Libraries -->
+        <!-- Cargar Firebase desde CDN -->
         <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js"></script>
+        <!-- Particles.js Library -->
         <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-		        <style>
+        <style>
             /* Estilos para el fondo de partículas en los wrappers */
             .wrapper {
                 position: relative;
@@ -126,29 +131,28 @@
         </div>
 
         <!-- Page Wrapper -->
-        <div id="page-wrapper">
+            <div id="page-wrapper">
 
-            <!-- Header -->
-            <header id="header" class="alt">
-                <h1><a href="index.html">PymeInside</a></h1>
-                <nav id="nav">
-                    <ul>
-                        <li class="special">
-                            <a href="#menu" class="menuToggle"><span>Menú</span></a>
-                            <div id="menu">
-                                <ul>
-                                    <li><a href="index.html">Inicio</a></li>
-                                    <li><a href="Servicios.html">Servicios</a></li>
-                                    <li><a href="Porfolio.html">Porfolio</a></li>
-                                    <li><a href="contacto.html">Contacto</a></li>
-                                    <button id="google-signin-btn">INICIAR SESIÓN</button>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </nav>
-            </header>
-
+                <!-- Header -->
+                    <header id="header" class="alt">
+                        <h1><a href="index.html">Pyme INSIDE</a></h1>
+                        <nav id="nav">
+                            <ul>
+                                <li class="special">
+                                    <a href="#menu" class="menuToggle"><span>Menú</span></a>
+                                    <div id="menu">
+                                        <ul>
+                                            <li><a href="index.html">Inicio</a></li>
+                                            <li><a href="Servicios.html">Servicios</a></li>
+                                            <li><a href="Porfolio.html">Porfolio</a></li>
+                                            <li><a href="contacto.html">Contacto</a></li>
+                                            <button id="google-signin-btn">INICIAR SESIÓN</button>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </nav>
+                    </header>
             <!-- Banner -->
             <section id="banner" class="wrapper" data-aos="fade-up">
                 <div class="particles-wrapper">
